// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeedbackResponseCard > renders correctly for radio button responses 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root response-card css-1j74uew-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root response-card-content css-1lt5qva-MuiCardContent-root"
    >
      <div
        class="response-card-recipient-info"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular avatar-photo css-fmeqll-MuiAvatar-root"
        >
          <img
            class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
            src="http://localhost:8080/services/member-profiles/member-photos/undefined"
          />
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 responder-name css-rizt0-MuiTypography-root"
        />
      </div>
      <div
        class="MuiFormGroup-root MuiFormGroup-row MuiRadioGroup-root MuiRadioGroup-row feedback-answer-radio css-cis11t-MuiFormGroup-root"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
        >
          <span
            aria-disabled="true"
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked Mui-disabled MuiRadio-root MuiRadio-colorPrimary css-1v7jmtj-MuiButtonBase-root-MuiRadio-root"
            tabindex="-1"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-j8yymo"
              disabled=""
              name=":r0:"
              type="radio"
              value="Yes"
            />
            <span
              class="css-1qiat4j"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bz1rr0-MuiSvgIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-z8nmqa-MuiSvgIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-rizt0-MuiTypography-root"
          >
            Yes
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
        >
          <span
            aria-disabled="true"
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-disabled MuiRadio-root MuiRadio-colorPrimary css-1v7jmtj-MuiButtonBase-root-MuiRadio-root"
            tabindex="-1"
          >
            <input
              class="PrivateSwitchBase-input css-j8yymo"
              disabled=""
              name=":r0:"
              type="radio"
              value="No"
            />
            <span
              class="css-1qiat4j"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bz1rr0-MuiSvgIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-o8rdeq-MuiSvgIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-rizt0-MuiTypography-root"
          >
            No
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeedbackResponseCard > renders correctly for slider responses 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root response-card css-1j74uew-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root response-card-content css-1lt5qva-MuiCardContent-root"
    >
      <div
        class="response-card-recipient-info"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular avatar-photo css-fmeqll-MuiAvatar-root"
        >
          <img
            class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
            src="http://localhost:8080/services/member-profiles/member-photos/undefined"
          />
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 responder-name css-rizt0-MuiTypography-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FeedbackResponseCard > renders correctly for text responses 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root response-card css-1j74uew-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root response-card-content css-1lt5qva-MuiCardContent-root"
    >
      <div
        class="response-card-recipient-info"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular avatar-photo css-fmeqll-MuiAvatar-root"
        >
          <img
            class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
            src="http://localhost:8080/services/member-profiles/member-photos/undefined"
          />
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 responder-name css-rizt0-MuiTypography-root"
        />
      </div>
      <pre
        class="fullWidth"
        style="white-space: pre-wrap;"
      >
        I love opossums. I have rehabilitated baby opossums for 25 years, and I intend to do so until my last day!
      </pre>
    </div>
  </div>
</div>
`;
